Begin revivification
Set java 1.8 as base/compile verson
Add import for javax-inject, as eclipse removed it
Fix some of the Warnings that have sprung up in the interim